1.1.2 to 1.1.3
----------------------------------------------------------------------
- Added some opennms.init changes to support SuSE. Thx Deej. Bug 713
- Added some build changes to support SuSE. Thx Deej. Bug 712
- Modified plugins and polloers to uses Socket.connect w/ timeout 
  rather than SocketChannels.  Bug 784
- Updated dtd link in web.xml. Thx Xavier. Bug 813
- Added a small workaround to "import" issues in jsps. Bug 820
- Fixed "unary operator" issue on CentOS (RHES) in opennms.sh. Bug 795
- (ELB) Fixed a number of javadoc warnings
- Fixed issues with event and notification browsing. Thx Jay. Bug 677
- Made a small change to support Fedora - Thx Thomas
- Added BEA Weblogic events. Thx Kyle
- Fixed admin pages to work with later Tomcat4 versions. Thx Doug
- Added Backup Exec event definitions. Thx Chris
- Corrected numbering at bottom of asset import page. Thx Jonathan
  Bug 806
- Fixed Pop3Monitor exception error. Thx. Xavier. Bug 807
- Fixed vulscand class cast error. Thx Siddhartha. Bug 810
- When a new service is added, like SNMP, the categories for the node
  that gained the service will be rescanned to see if the new service
  modifies the filter for a particular category. Bug 683
- When a service is deleted from a node, the node will not be deleted
  from all categories. Bug 796 and 775
- When new services are discovered via a rescan, they were not being
  polled until OpenNMS was restarted. This is now fixed.
- Fixed a Delete Nodes issues with RTC - Bug 797
- Added support to build OpenNMS on FreeBSD. Thx Andrei
- HttpMonitor and HttpsMonitor now use "port" instead of "ports".
  Bug 744
- Modified the DecimalFormat in CategoryUtil from ".000" to "0.000"
  Bug 468
- Added a sort to KSC reports - Thx Craig - Bug 751
- Fixed typos - Thx Volker - Bug 750
- Merge some more changes from the Rackspace branch.
- Made some serious performance enhancements to startup times.
- Added an XML RPC daemon for sending OpenNMS to an external server